Clarified secret status.

--- a/screenshots.html
+++ b/screenshots.html
@@ -32,7 +32,7 @@ layout: default
 			</div>
 		</div>
 		<div class="col-xs-12 col-md-4">
-			<h5>5. Past the expiry or view limits, the secret cannot be retrieved.</h5>
+			<h5>5. Past the expiry or view limits, the secret is deleted and cannot be retrieved.</h5>
 			<div class="thumbnail">
 				<img src="images/5.png"/>
 			</div>
