Converted accidental markdown -> html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Agrippa is a PHP-based secret sharing mechanism. Named after the work of <a href
 
 <h4>Requirements</h4>
 <p>
-  In short, Agrippa has the same requirements as [Laravel 5.1](http://laravel.com/docs/5.1#installation):
+  In short, Agrippa has the same requirements as <a href="http://laravel.com/docs/5.1#installation">Laravel 5.1</a>:
   <ul>
     <li>Apache or Nginx</li>
     <li>PHP >= 5.5.9</li>
